package com.currency.converter.model;

public enum Category {

    GROCERY,
    NON_GROCERY,
}
