package com.currency.converter.model;

import lombok.Getter;
import lombok.Setter;

import java.math.BigDecimal;

@Getter
@Setter
public class Item {

    private String name;
    private Category category;
    private BigDecimal price;
}
