package com.currency.converter.model;

import lombok.Getter;
import lombok.Setter;

@Getter
@Setter
public class UserType {

    private boolean isAffiliate;
    private boolean isEmployee;
    private boolean isCustomer;
    private int tenure;

}
